syntax = "proto3";

option go_package = "github.com/redhat-marketplace/redhat-marketplace-operator/airgap/v2/apis/fileretreiver";
option java_multiple_files = true;
option java_package = "com.redhat.marketplace.airgap.fileretreiver";
option java_outer_classname = "FileRetreiver";

package fileretreiver;

import "apis/model/model.proto";

service FileRetreiver {
  rpc ListFileMetadata(ListFileMetadataRequest) returns (stream ListFileMetadataResponse) {};
  rpc GetFileMetadata(GetFileMetadataRequest) returns (GetFileMetadataResponse) {};
  rpc DownloadFile(DownloadFileRequest) returns (stream DownloadFileResponse) {};
}

message ListFileMetadataRequest {
  message ListFileFilter {
    enum Comparison {
      EQUAL = 0;
      LESS_THAN = 1;
      GREATER_THAN = 2;
      CONTAINS = 3;
    }

    string key = 1;
    Comparison operator = 2;
    string value = 3;
  }

  message ListFileSort {
    enum SortOrder {
        ASC = 0;
        DESC = 1;
    }

    string key = 1;
    SortOrder sort_order = 2;
  }

  repeated ListFileFilter filter_by = 1;
  repeated ListFileSort sort_by = 2;
  bool include_deleted_files = 3;
}


message ListFileMetadataResponse {
  model.FileInfo results = 1;
}

message GetFileMetadataRequest {
  model.FileID file_id = 1;
}

message GetFileMetadataResponse {
  model.FileInfo info = 1;
}

message DownloadFileRequest {
  model.FileID file_id = 1;
  bool delete_on_download = 2;
}

message DownloadFileResponse {
 oneof data {
    model.FileInfo info = 1;
    bytes chunk_data = 2;
  };
}
